feat: -removed Spring AI configuration files & dependencies -changed Boolean 'isActive' wrapper field to primitive in InviteToken(preventing creating is_isActive in Jpa requests) -